Fixing spacing and flex grid of team info table.

--- a/src/components/SingleLineupPage/SingleLineupPage.css
+++ b/src/components/SingleLineupPage/SingleLineupPage.css
@@ -144,4 +144,5 @@ h1 {
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
